--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Feature five</p>
     </div>
     <hr>
-    <p>Free</p>
+    <p id="free">Free</p>
     <p id="forever">Forever !</p>
 </div>
     <button>Get started</button>
