--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
     <h1>Basic</h1>
     <div class="features">
         <img src="./images/green.png" alt="checkmark">
-        <p>Feature one</p>
+        <p class="sen">Feature one</p>
     </div>
     <div class="features">
         <img src="./images/green.png" alt="checkmark">
-        <p>Feature two</p>
+        <p class="sen">Feature two</p>
     </div>
     <div class="features">
         <img src="./images/red.png" alt="cross">
-        <p>Feature three</p>
+        <p class="sen">Feature three</p>
     </div>
     <div class="features">
         <img src="./images/red.png" alt="cross">
-        <p>Feature four</p>
+        <p class="sen">Feature four</p>
     </div>
-    <div class="features">
+    <div class="features" id="featfive">
         <img src="./images/red.png" alt="cross">
-        <p>Feature five</p>
+        <p class="sen">Feature five</p>
     </div>
     <hr>
     <p id="free">Free</p>
     <p id="forever">Forever !</p>
-</div>
     <button>Get started</button>
+</div>
 </body>
 </html>
